Removed individuals with covariates missing. Fixed SST Bug. Fixed Individuals Exclude list Bug. Added faster SST calculation
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/genabel/pkg/OmicABELnoMM@1818 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,7 +8,7 @@ Features:
 -Allow for runtime dosage models
 
 Optimizations:
--Remove individuals with covariates missing
+
 -Reduce memcpy overhead of XR and XR XL factors
 -Reduce computation time of XR and XR XL factors (do GEMMS)
 
@@ -17,8 +17,17 @@ Optimizations:
 
 Changes
 -------------
-4 -9 - 2014
+-------------
 
+8-9-2014
+--------------
+Removed individuals with covariates missing
+Fixed SST Bug
+Fixed Individuals Exclude list Bug
+Added faster SST calculation
+
+4-9-2014
+--------------
 First user usable version.
 Several Bug-fixes.
 Added parameters to control thresholds of significance.
